# autopilot

./: .gitignore  CLAUDE.md  README.md  polar.h  pyproject.toml  requirements.txt  specification.md
.cursor/rules/: nmea2000-conventions.mdc  path-sanitization.mdc  uv-python.mdc
.github/workflows/: test.yml
deploy/: 80-can.rules  can-logger.service  can0-up.sh  can0.network  can_logger.json  mnt-usbdrive.mount
docs/: README.md  blended_pd_ml_controller.md  bus_analysis_20260215.txt  bus_analysis_check_20260324.txt  can_logger.md  dagger_training.md  data_preparation.md  feature_engineering_sign_convention.md  grib_visualization.md  hardware_simulators.md  heel_physics_model.md  helm_controller_bug_fix.md  imu-bno055_benchmark.md  imu_bno055_setup.md  imu_i2c_setup.md  imu_offset_calibration.md  mlflow.md  model_architecture.md  model_architecture_evaluation.md  model_evaluation_report.md  model_export_onnx.md  model_training.md  p70-ev1-control-pgns.md  p70findings.txt  pd_controller.md  pi_setup.md  planned_passage_experiment.md  planned_passage_specification.md  simulated_training_data.md  wind-mode-analysis-20260324.txt
experiments/: __init__.py
experiments/experiment1/: __init__.py  export_track.py  grib_reader.py  metrics.py  navigator.py  passage_simulator.py  route_parser.py  run_experiment.py  wave_provider.py  wind_provider.py
firmware/actuator/: README.md  hardware_design.md  platformio.ini
firmware/esp32_autopilot/: README.md  external_simulator.md  platformio.ini
firmware/mcu/: README.md  platformio.ini
firmware/mcu/src/: config.h  (+4 more)
hardware/actuator-board/: README.md  actuator-board.kicad_pcb  actuator-board.kicad_prl  actuator-board.kicad_pro  actuator-board.kicad_sch  actuator-board.net
hardware/imu-board/: README.md  imu-board.kicad_pcb  imu-board.kicad_pro  imu-board.kicad_sch
planning/: can_log_organizer.md  esp32-plan.md  grib_visualization_plan.md  hardware_simulators_plan.md  heel_physics_plan.md  implementation_plan.md  imu_hardware_design.md  imu_offset_mounting.md  log_analyzer_plan.md  planned_passage_experiment.md  pre_training_analysis.md  raymarine_log_format.md  simulation_plan.md  smooth_pilot.md  unit_test_plan.md  walkthrough.md
scripts/: analyze_canlog.py  analyze_ev1_126720.py  analyze_f088_fields.py  analyze_p70_requests.py  analyze_p70_responses.py  analyze_wind_mode.py  bno055_benchmark.py  bno055_calibrate.py  bno055_detect.py  bno055_read.py  canl_to_candump.py  external_sim.py  regenerate_training_data.py  sync_to_pi.sh
src/: __init__.py  main.py
src/control/: __init__.py  actuator_interface.py  mode_manager.py  rudder_controller.py  safety.py
src/ml/: autopilot_model.py  feature_engineering.py  polar.py
src/n2k/: __init__.py  can_logger.py  can_logger_web.py  data_logger.py  log_organizer.py
src/pilots/: __init__.py  adaptive_pilot.py  base.py  evaluate.py  pd_pilot.py  pid_pilot.py  smooth_pilot.py
src/sensors/: __init__.py  adc_reader.py  imu_fusion.py  imu_fusion_bno055.py  imu_fusion_i2c.py  nmea2000_interface.py
src/simulation/: __init__.py  calibration.py  data_generator.py  helm_controller.py  maneuvers.py  scenarios.py  wave_model.py  wind_model.py  yacht_dynamics.py
src/training/: data_loader.py  log_analyzer.py  train_imitation.py
tests/: conftest.py  test_actuator_interface.py  test_adaptive_pilot.py  test_autopilot_model.py  test_can_logger.py  test_data_logger.py  test_experiment1.py  test_feature_engineering.py  test_hw_simulators.py  test_imu_fusion.py  test_imu_fusion_bno055.py  test_imu_fusion_i2c.py  test_log_analyzer.py  test_mode_manager.py  test_nmea2000.py  test_pilots.py  test_polar.py  test_safety.py  test_simulation.py  test_smooth_pilot.py  test_vis_server.py
vis/: safe_path.py
vis/gribs/: server.py
vis/imu/: server.py
vis/training/: server.py
watch/: README.md  local.properties  settings.gradle.kts
watch/app/: build.gradle.kts  proguard-rules.pro
(+94 files in other folders)
