[project]
name = "autopilot"
version = "0.1.0"
description = "ML Yacht Autopilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "python-can>=4.0.0",
    "pyserial>=3.5",
    "torch>=2.2.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "onnxscript>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mlflow>=2.10.0",
]
rpi = [
    # Raspberry Pi specific dependencies (inference only, no PyTorch)
    "onnxruntime>=1.20.1",
    "RPi.GPIO",
    "adafruit-circuitpython-ads1x15",
    "smbus2>=0.4.0",
]
viz = [
    "matplotlib>=3.5.0",
    "flask>=3.0.0",
]
experiment = [
    # GRIB file reading
    "cfgrib>=0.9.10",
    "xarray>=2023.1.0",
    "eccodes>=1.5.0",
]

[project.scripts]
autopilot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov=experiments --cov-report=term-missing"
